--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="bgcolor">#F2F0F1</color>
     <color name="bgwhite">#FFFFFF</color>
+    <color name="bgblack">#000000</color>
     <color name="titlecolor">#666666</color>
 </resources>
