--- a/app/src/main/res/layout/activity_tiles.xml
+++ b/app/src/main/res/layout/activity_tiles.xml
@@ -55,9 +55,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:padding="0dp">
+                android:padding="3dp">
 
                 <TextView
                     android:id="@+id/tv_latestnews1"
@@ -732,6 +733,106 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            app:cardElevation="1dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/bgwhite"
+                                android:orientation="vertical"
+                                android:textDirection="rtl">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="110dp"
+                                    android:adjustViewBounds="true"
+                                    android:contentDescription="@string/action_settings"
+                                    android:scaleType="fitXY"
+                                    app:srcCompat="@drawable/flower" />
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            app:cardElevation="1dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/bgwhite"
+                                android:orientation="vertical"
+                                android:textDirection="rtl">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="110dp"
+                                    android:adjustViewBounds="true"
+                                    android:contentDescription="@string/action_settings"
+                                    android:scaleType="fitXY"
+                                    app:srcCompat="@drawable/flower" />
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            app:cardElevation="1dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/bgwhite"
+                                android:orientation="vertical"
+                                android:textDirection="rtl">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="110dp"
+                                    android:adjustViewBounds="true"
+                                    android:contentDescription="@string/action_settings"
+                                    android:scaleType="fitXY"
+                                    app:srcCompat="@drawable/flower" />
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            app:cardElevation="1dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/bgwhite"
+                                android:orientation="vertical"
+                                android:textDirection="rtl">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="110dp"
+                                    android:adjustViewBounds="true"
+                                    android:contentDescription="@string/action_settings"
+                                    android:scaleType="fitXY"
+                                    app:srcCompat="@drawable/flower" />
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
                             android:layout_width="110dp"
